Fix user-select on input - Override user-select: none; for text input 	- This setting disables cursor and input functions on mobile - Kept the global style for buttons and other things which don't require   cursor/copy/paste/selection functions.

--- a/source/scss/atoms/_input.scss
+++ b/source/scss/atoms/_input.scss
@@ -19,6 +19,7 @@
     position: absolute;
     left: 0;
     width: 100%;
+    height: 100%;
     padding: rem(10px) rem(10px);
     border: 0;
     z-index: 3;
@@ -26,6 +27,7 @@
     &:focus, 
     &:active {
         outline: 0;
+        user-select: initial;
     } 
 
     //&:-moz-submit-invalid, 
