--- a/source/scss/style.css
+++ b/source/scss/style.css
@@ -2731,11 +2731,16 @@ body {
   position: absolute;
   left: 0;
   width: 100%;
+  height: 100%;
   padding: 0.625rem 0.625rem;
   border: 0;
   z-index: 3; }
   .input__input:focus, .input__input:active {
-    outline: 0; }
+    outline: 0;
+    -webkit-user-select: initial;
+       -moz-user-select: initial;
+        -ms-user-select: initial;
+            user-select: initial; }
   .input__input:invalid {
     -webkit-box-shadow: none;
             box-shadow: none; }
